syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service MtOtaService {
  rpc GetVersion(google.protobuf.Empty) returns (GetVersionRes) {}
  rpc OtaUpdate(OtaUpdateReq) returns (OtaUpdateRes) {}
}

message Version {
  string version = 1; // 版本
}

message GetVersionRes {
  int32 code = 1;
  Version version = 2;
}

message OpOtaUpdate {
  google.protobuf.StringValue url = 1; // ota url
}

message OtaUpdateReq {
  OpOtaUpdate ota = 1;
}

message OtaUpdateRes {
  int32 code = 1;
}
